@@ -284,118 +284,6 @@
 	}
 }
 
-
-/***
- * SELECT2 *
- ***/
-
-#wpwrap .select2-container-multi {
-	.select2-choices .select2-search-field input {
-		line-height: 1;
-		min-height: 0;
-	}
-}
-
-.ms-select2 {
-	&.select2-container {
-		margin-right: .5em;
-
-		a {
-			transition-duration: 0 !important; /* Inside select2 there should be no default link transitions */
-		}
-
-		.select2-choice,
-		.select2-choices {
-			height: 28px;
-			line-height: 27px;
-			font-size: 14px;
-			border-radius: 3px;
-			border-color: #CCC;
-
-			.select2-arrow {
-				border: 0;
-				background: transparent;
-			}
-		}
-	}
-
-	&.select2-dropdown-open {
-		.select2-choice,
-		.select2-choices {
-			border-bottom-left-radius: 0;
-			border-bottom-right-radius: 0;
-		}
-	}
-
-	&.select2-container-active {
-		.select2-choice,
-		.select2-choices {
-			border-color: #5897fb;
-			box-shadow: none;
-		}
-	}
-
-	.select2-search {
-		margin-bottom: 4px;
-		font-size: 14px;
-	}
-
-	.select2-results {
-		padding: 0;
-		margin: 0;
-		font-size: 14px;
-
-		.select2-result {
-			margin: 0;
-		}
-
-		.select2-highlighted {
-			background: #F4F4F4;
-			color: #000;
-		}
-
-		.select2-match {
-			text-decoration: none;
-			background: #77C9FF;
-			color: #FFF;
-			border-radius: 3px;
-			font-weight: 100;
-
-			&:empty {
-				display: none;
-			}
-		}
-
-		.select2-disabled {
-			background: #DDD;
-			font-weight: 200;
-			opacity: .5;
-
-			.select2-result-label {
-				cursor: default;
-			}
-		}
-	}
-}
-
-.select2-drop {
-	overflow: hidden;
-	border-radius: 0 0 3px 3px;
-	max-width: 80%;
-}
-
-/* When a thickbox window is open make sure the select2-dropdown is visible */
-.modal-open {
-	.select2-drop-mask {
-		z-index: 999998;
-	}
-
-	.select2-drop {
-		z-index: 999999;
-	}
-}
-
-
 /***
  * RADIO SLIDER *
  ***/
